# oh-my-shell

./: CMakeLists.txt  README.md
include/: banner.h  builtin_prompts.h  color.h  environment.h  io_handler.h  path.h  prompt.h  special_prompts.h
include/environment/: environment.h  path.h
include/io/: io_handler.h
src/: environment.cpp  io_handler.cpp  ohmyshell.cpp
src/environment/: environment.cpp
src/io/: io_handler.cpp
